5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1649_2446.log
== TEST (2019-04-11 19:56:35) 
-- CODE:
numero=int(input("digite um numero de 6 dig"))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	prnt("senha válida")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    prnt("senha válida")
NameError: name 'prnt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:43) 
-- CODE:
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	prnt("senha válida")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    prnt("senha válida")
NameError: name 'prnt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:08) 
-- CODE:
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	print("senha válida")
else:
	print("senha invalida")
-- OUTPUT:
senha válida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:36) 
-- CODE:
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
senha valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:48) 
-- CODE:
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
senha valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:58) 
-- CODE:
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	print("senha valida")
else:
	print("senha invalida")
-- OUTPUT:
senha valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:58:07) 
-- CODE:
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)):
	print("senha valida")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.187957
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha valida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha valida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:31:37) 
-- CODE:
#soma dos digitos da SEGUNDA, QUARTA E SEXTA POSIÇÃO
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:31:59) 
-- CODE:
#soma dos digitos da SEGUNDA, QUARTA E SEXTA POSIÇÃO
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:35:17) 
-- CODE:
#soma dos digitos da SEGUNDA, QUARTA E SEXTA POSIÇÃO
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d1+d3+d5)%(d2+d4+d6)==0):
	mensagem= "acesso liberado"
	print(mensagem)
else:
	mensagem= "senha invalida"
	print(mensagem)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:36:11) 
-- CODE:
#soma dos digitos da SEGUNDA, QUARTA E SEXTA POSIÇÃO
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d2+d4+d6)%(d1+d3+d5)==0):
	mensagem= "acesso liberado"
	print(mensagem)
else:
	mensagem= "senha invalida"
	print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:36:24) 
-- CODE:
#soma dos digitos da SEGUNDA, QUARTA E SEXTA POSIÇÃO
numero=int(input("digite um numero de 6 dig: "))
d1=numero//100000
resto=numero%100000
d2=resto//10000
resto=resto%10000
d3=resto//1000
resto=resto%1000
d4=resto//100
resto=resto%100
d5=resto//10
d6=resto%10
if((d2+d4+d6)%(d1+d3+d5)==0):
	mensagem= "acesso liberado"
	print(mensagem)
else:
	mensagem= "senha invalida"
	print(mensagem)
-- EXECUTION TIME:
0.213962
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
